# Numeric_methods_of_continuum_mechanics

./: CMakeLists.txt  ReadMe.md  main.cpp  main_lap.cpp  requirements.txt
Linear elasticity/: new_volume.py  params.py  params3d.py  shear_lock.py  volume_lock.py
convection-diffusion/convection_diffusion/: diff_con.py
diffusion_practise_one/: Laplacian.cpp  Laplacian.h  main.py  thomas.py
navier-stokes/: main.py
progonka/: thomas.cpp  thomas.h  thomas.py  without_class.py
source/: main.py  params.py
stokes/: stokes.py  stokes_velocity.vtk
stokes/donskow/: params.py  stokes.py
